# confide

./: .gitignore  CLA.md  CONTRIBUTING.md  CONTRIBUTORS.md  DISCLAIMER.md  Dockerfile  HARM-TAXONOMY.md  ISOLATION.md  LICENSE  Makefile  README.md  SECURITY.md  confide.py  docker-compose.yml  pyproject.toml  requirements.txt  run-benchmark.sh
docs/: ANNOTATION-CODEBOOK.md  ANNOTATION-TOOL-GUIDE.md  BENCHMARK-MODEL-STACK-CHECKLIST.md  BENCHMARK.md  CALL-FOR-VOLUNTEERS.md  CLOUD-INFERENCE.md  CLOUD-MODEL-RESULTS.md  CONFIDE-README.md  DATASET-LANDSCAPE.md  DATASETS.md  DATASHEET.md  EPIC.md  EVAL-README.md  EXPLAINER.md  EXTERNAL-SESSION-SOURCES.md  GLOSSARY.md  ISOLATION.md  LOCAL-LLM-DEID-EXPERIMENT.md  PREREGISTRATION.md  REGULATORY-METRICS-PLAN.md  REPORTING.md  REPRODUCIBILITY.md  RESEARCH-FINDINGS.md  RESEARCH-PROMPT.md  ROADMAP.md  SOURCES.md  THREE-LOCKS.md  TOOLS.md  WHITEPAPER.md  de-id-tools-landscape-research.md
eval/: ANNOTATION-TOOL-GUIDE.md  BENCHMARK.md  CALL-FOR-VOLUNTEERS.md  CITATION-AUDIT.md  CLOUD-MODEL-RESULTS.md  CONFIDE-README.md  CONFIDE-RED-COMPARISON.md  CONFIDE-RED-RESULTS-gpt5.md  CONFIDE-RED-RESULTS-qwen3b.md  CONFIDE-RED-RESULTS.md  DATASET-LANDSCAPE.md  DATASETS.md  DATASHEET.md  Dockerfile  ETHICS.md  EXPLAINER.md  IAA-RESULTS.md  Makefile  PREREGISTRATION.md  README.md  REPORTING.md  REPRODUCIBILITY.md  RESEARCH-FINDINGS.md  RESEARCH-MULTILINGUAL.md  ROADMAP.md  bench-results.json  benchmark-report.html  bootstrap_ci.py  build_dataset.py  build_ru_adversarial.py  build_ru_dataset.py  check_artifacts.py  confide-red-results-gpt5.json  (+47 more)
(+320 files in other folders)
